@@ -1,12 +1,11 @@
 package yo.dbunitcli.application;
 
+import org.dbunit.dataset.Column;
+import org.dbunit.dataset.DataSetException;
 import org.dbunit.dataset.ITable;
 import org.junit.Assert;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.contrib.java.lang.system.ExpectedSystemExit;
-import org.junit.rules.ExpectedException;
 import yo.dbunitcli.dataset.ComparableDataSetImpl;
 import yo.dbunitcli.dataset.ComparableDataSetParam;
 import yo.dbunitcli.dataset.ComparableTable;
@@ -18,12 +17,11 @@ import yo.dbunitcli.dataset.producer.ComparableXlsxDataSetProducer;
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Objects;
 
 public class ConvertTest {
-    @Rule
-    public ExpectedException expectedException = ExpectedException.none();
-    @Rule
-    public ExpectedSystemExit exit = ExpectedSystemExit.none();
 
     private String testResourceDir;
 
@@ -31,15 +29,15 @@ public class ConvertTest {
 
     @Before
     public void setUp() throws UnsupportedEncodingException {
-        this.baseDir = URLDecoder.decode(this.getClass().getResource(".").getPath(), "UTF-8");
+        this.baseDir = URLDecoder.decode(Objects.requireNonNull(this.getClass().getResource(".")).getPath(), StandardCharsets.UTF_8);
         this.testResourceDir = this.baseDir.replace("target/test-classes", "src/test/resources");
     }
 
     @Test
     public void testFromRegexToXlsx() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromRegexToXlsx.txt"});
-        File src = new File(this.baseDir + "/regex2xlsx/result/paramFromRegexToXlsx.xlsx");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertRegexToXlsx.txt"});
+        final File src = new File(this.baseDir + "/regex2xlsx/result/paramConvertRegexToXlsx.xlsx");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -50,9 +48,9 @@ public class ConvertTest {
 
     @Test
     public void testNoSetting() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromRegexToXlsxNoSetting.txt"});
-        File src = new File(this.baseDir + "/regex2xlsx/result/paramFromRegexToXlsxNoSetting.xlsx");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertRegexToXlsxNoSetting.txt"});
+        final File src = new File(this.baseDir + "/regex2xlsx/result/paramConvertRegexToXlsxNoSetting.xlsx");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -63,9 +61,9 @@ public class ConvertTest {
 
     @Test
     public void testFromCsvToXlsx() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromCsvToXlsx.txt"});
-        File src = new File(this.baseDir + "/csv2xlsx/result/paramFromCsvToXlsx.xlsx");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvToXlsx.txt"});
+        final File src = new File(this.baseDir + "/csv2xlsx/result/paramConvertCsvToXlsx.xlsx");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -77,9 +75,9 @@ public class ConvertTest {
 
     @Test
     public void testFromCsvToMultiXlsx() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromCsvToMultiXlsx.txt"});
-        File src = new File(this.baseDir + "/csv2xlsx/resultmultixlsx");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvToMultiXlsx.txt"});
+        final File src = new File(this.baseDir + "/csv2xlsx/resultmultixlsx");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.xlsx)
@@ -92,9 +90,9 @@ public class ConvertTest {
 
     @Test
     public void testFromCsvToMultiXls() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromCsvToMultiXls.txt"});
-        File src = new File(this.baseDir + "/csv2xlsx/resultmultixls");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvToMultiXls.txt"});
+        final File src = new File(this.baseDir + "/csv2xlsx/resultmultixls");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.xls)
@@ -106,10 +104,10 @@ public class ConvertTest {
     }
 
     @Test
-    public void testParamFromFixedFileToCsv() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromFixedFileToCsv.txt"});
-        File src = new File(this.baseDir + "/fixed2csv/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+    public void testparamConvertFixedFileToCsv() throws Exception {
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertFixedFileToCsv.txt"});
+        final File src = new File(this.baseDir + "/fixed2csv/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableCsvDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.csv)
@@ -118,7 +116,7 @@ public class ConvertTest {
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
         Assert.assertEquals("固定長ファイル", actual.getTableNames()[0]);
-        ComparableTable table = actual.getTable("固定長ファイル");
+        final ComparableTable table = actual.getTable("固定長ファイル");
         Assert.assertEquals(4, table.getRowCount());
         Assert.assertEquals("a1a", table.getValue(0, "半角"));
         Assert.assertEquals("a  ", table.getValue(1, "半角"));
@@ -136,9 +134,9 @@ public class ConvertTest {
 
     @Test
     public void testFromCsvqToCsv() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromCsvqToCsv.txt"});
-        File src = new File(this.baseDir + "/csvq/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvqToCsv.txt"});
+        final File src = new File(this.baseDir + "/csvq/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableCsvDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.csv)
@@ -151,9 +149,9 @@ public class ConvertTest {
 
     @Test
     public void testXlsxWithSchemaToCsv() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromXlsxWithSchemaToCsv.txt"});
-        File src = new File(this.baseDir + "/xlsxwithschema/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertXlsxWithSchemaToCsv.txt"});
+        final File src = new File(this.baseDir + "/xlsxwithschema/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableCsvDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.csv)
@@ -169,9 +167,9 @@ public class ConvertTest {
 
     @Test
     public void testXlsWithSchemaToCsv() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromXlsWithSchemaToCsv.txt"});
-        File src = new File(this.baseDir + "/xlsxwithschema/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertXlsWithSchemaToCsv.txt"});
+        final File src = new File(this.baseDir + "/xlsxwithschema/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableCsvDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSource(DataSourceType.csv)
@@ -187,15 +185,15 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMap() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMap.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/result/paramFromMultiCsvTableNameMap.xlsx");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMap.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/result/paramConvertMultiCsvTableNameMap.xlsx");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -212,9 +210,9 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMapNoSortToCsv() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMapNoSortToCsv.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/NoSortCsv/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMapNoSortToCsv.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/NoSortCsv/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableCsvDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -222,7 +220,7 @@ public class ConvertTest {
                                 .setEncoding("UTF-8")
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -239,16 +237,16 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMapNoSortToXls() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMapNoSortToXls.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/NoSortXls/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMapNoSortToXls.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/NoSortXls/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
                                 .setSource(DataSourceType.xls)
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -265,16 +263,16 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMapNoSortToXlsx() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMapNoSortToXlsx.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/NoSortXlsx/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMapNoSortToXlsx.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/NoSortXlsx/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
                                 .setSource(DataSourceType.xlsx)
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -291,16 +289,16 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMapNoSortToXlsPerTable() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMapNoSortToXlsPerTable.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/NoSortXlsBook/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMapNoSortToXlsPerTable.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/NoSortXlsBook/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
                                 .setSource(DataSourceType.xls)
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -317,16 +315,16 @@ public class ConvertTest {
 
     @Test
     public void testTableNameMapNoSortToXlsxPerTable() throws Exception {
-        Convert.main(new String[]{"@" + this.testResourceDir + "/paramFromMultiCsvTableNameMapNoSortToXlsxPerTable.txt"});
-        File src = new File(this.baseDir + "/tablenamemap/NoSortXlsxBook/result");
-        ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertMultiCsvTableNameMapNoSortToXlsxPerTable.txt"});
+        final File src = new File(this.baseDir + "/tablenamemap/NoSortXlsxBook/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
                 new ComparableXlsxDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
                                 .setSource(DataSourceType.xlsx)
                                 .build()));
         Assert.assertEquals(1, actual.getTableNames().length);
-        ITable merged = actual.getTables()[0];
+        final ITable merged = actual.getTables()[0];
         Assert.assertEquals("merge", merged.getTableMetaData().getTableName());
         Assert.assertEquals(4, merged.getTableMetaData().getColumns().length);
         Assert.assertEquals(6, merged.getRowCount());
@@ -340,4 +338,139 @@ public class ConvertTest {
         Assert.assertEquals("test", merged.getValue(4, "columnb"));
         Assert.assertEquals("3", merged.getValue(5, "key"));
     }
+
+    @Test
+    public void testConvertCsvSplitMultiXlsx() throws Exception {
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvSplitMultiXlsx.txt"});
+        final File src = new File(this.baseDir + "/split/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+                new ComparableXlsxDataSetProducer(
+                        ComparableDataSetParam.builder()
+                                .setSrc(src)
+                                .setSource(DataSourceType.xlsx)
+                                .build()));
+        Assert.assertEquals(8, actual.getTableNames().length);
+        final ITable split1 = actual.getTables()[0];
+        Assert.assertEquals("0000_multi1", split1.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "column1", "column2", "column3"}, getColumnNames(split1));
+        Assert.assertEquals(2, split1.getRowCount());
+        Assert.assertEquals("1", split1.getValue(0, "key"));
+        Assert.assertEquals("2", split1.getValue(1, "key"));
+        final ITable split2 = actual.getTables()[1];
+        Assert.assertEquals("0000_multi2", split2.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "columna", "columnb", "columnc"}, getColumnNames(split2));
+        Assert.assertEquals(2, split2.getRowCount());
+        Assert.assertEquals("1", split2.getValue(0, "key"));
+        Assert.assertEquals("2", split2.getValue(1, "key"));
+        final ITable split3 = actual.getTables()[2];
+        Assert.assertEquals("0000_rename", split3.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "column1", "column2", "column3"}, getColumnNames(split3));
+        Assert.assertEquals(2, split3.getRowCount());
+        Assert.assertEquals("1", split3.getValue(0, "key"));
+        Assert.assertEquals("2", split3.getValue(1, "key"));
+        final ITable split4 = actual.getTables()[3];
+        Assert.assertEquals("0001_rename", split4.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "column1", "column2", "column3"}, getColumnNames(split4));
+        Assert.assertEquals(1, split4.getRowCount());
+        Assert.assertEquals("3", split4.getValue(0, "key"));
+        final ITable split5 = actual.getTables()[4];
+        Assert.assertEquals("multi1_00", split5.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "column1", "column2", "column3"}, getColumnNames(split5));
+        Assert.assertEquals(1, split5.getRowCount());
+        Assert.assertEquals("2", split5.getValue(0, "key"));
+        final ITable split6 = actual.getTables()[5];
+        Assert.assertEquals("multi1_01", split6.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "column1", "column2", "column3"}, getColumnNames(split6));
+        Assert.assertEquals(1, split6.getRowCount());
+        Assert.assertEquals("3", split6.getValue(0, "key"));
+        final ITable split7 = actual.getTables()[6];
+        Assert.assertEquals("multi2_00", split7.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "columna", "columnb", "columnc"}, getColumnNames(split7));
+        Assert.assertEquals(1, split7.getRowCount());
+        Assert.assertEquals("2", split7.getValue(0, "key"));
+        final ITable split8 = actual.getTables()[7];
+        Assert.assertEquals("multi2_01", split8.getTableMetaData().getTableName());
+        Assert.assertArrayEquals(new String[]{"key", "columna", "columnb", "columnc"}, getColumnNames(split8));
+        Assert.assertEquals(1, split8.getRowCount());
+        Assert.assertEquals("3", split8.getValue(0, "key"));
+    }
+
+    @Test
+    public void testConvertCsvSplitByColumnMultiXlsx() throws Exception {
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvSplitByColumnMultiXlsx.txt"});
+        final File src = new File(this.baseDir + "/split/keysplit_result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+                new ComparableXlsxDataSetProducer(
+                        ComparableDataSetParam.builder()
+                                .setSrc(src)
+                                .setSource(DataSourceType.xlsx)
+                                .build()));
+        Assert.assertEquals(3, actual.getTableNames().length);
+        final ITable split1 = actual.getTables()[0];
+        Assert.assertEquals("0000_break_key1", split1.getTableMetaData().getTableName());
+        Assert.assertEquals(4, split1.getRowCount());
+        Assert.assertEquals("1", split1.getValue(0, "key1"));
+        Assert.assertEquals("4", split1.getValue(0, "key2"));
+        Assert.assertEquals("number", split1.getValue(0, "col1"));
+        Assert.assertEquals("2", split1.getValue(1, "key1"));
+        Assert.assertEquals("3", split1.getValue(1, "key2"));
+        Assert.assertEquals("number", split1.getValue(1, "col1"));
+        Assert.assertEquals("A", split1.getValue(2, "key1"));
+        Assert.assertEquals("1", split1.getValue(2, "key2"));
+        Assert.assertEquals("test", split1.getValue(2, "col1"));
+        Assert.assertEquals("A", split1.getValue(3, "key1"));
+        Assert.assertEquals("2", split1.getValue(3, "key2"));
+        Assert.assertEquals("test", split1.getValue(3, "col1"));
+        final ITable split2 = actual.getTables()[1];
+        Assert.assertEquals("0001_break_key1", split2.getTableMetaData().getTableName());
+        Assert.assertEquals("A", split2.getValue(0, "key1"));
+        Assert.assertEquals("3", split2.getValue(0, "key2"));
+        Assert.assertEquals("test3", split2.getValue(0, "col1"));
+        Assert.assertEquals("B", split2.getValue(1, "key1"));
+        Assert.assertEquals("3", split2.getValue(1, "key2"));
+        Assert.assertEquals("", split2.getValue(1, "col1"));
+        Assert.assertEquals("B", split2.getValue(2, "key1"));
+        Assert.assertEquals("4", split2.getValue(2, "key2"));
+        Assert.assertEquals("", split2.getValue(2, "col1"));
+        Assert.assertEquals("C", split2.getValue(3, "key1"));
+        Assert.assertEquals("10", split2.getValue(3, "key2"));
+        Assert.assertEquals("", split2.getValue(3, "col1"));
+        final ITable split3 = actual.getTables()[2];
+        Assert.assertEquals("0002_break_key1", split3.getTableMetaData().getTableName());
+        Assert.assertEquals(1, split3.getRowCount());
+        Assert.assertEquals("あ", split3.getValue(0, "key1"));
+        Assert.assertEquals("3", split3.getValue(0, "key2"));
+        Assert.assertEquals("", split3.getValue(0, "col1"));
+    }
+
+    @Test
+    public void testConvertCsvSeparateMultiXlsx() throws Exception {
+        Convert.main(new String[]{"@" + this.testResourceDir + "/paramConvertCsvSeparateMultiXlsx.txt"});
+        final File src = new File(this.baseDir + "/separate/result");
+        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+                new ComparableXlsxDataSetProducer(
+                        ComparableDataSetParam.builder()
+                                .setSrc(src)
+                                .setSource(DataSourceType.xlsx)
+                                .build()));
+        Assert.assertEquals(3, actual.getTableNames().length);
+        Assert.assertEquals("multi2", actual.getTableNames()[0]);
+        final ITable split1 = actual.getTables()[1];
+        Assert.assertEquals("split1", split1.getTableMetaData().getTableName());
+        Assert.assertEquals(2, split1.getRowCount());
+        Assert.assertEquals("1", split1.getValue(0, "key"));
+        Assert.assertEquals("2", split1.getValue(1, "key"));
+        final ITable split2 = actual.getTables()[2];
+        Assert.assertEquals("split2", split2.getTableMetaData().getTableName());
+        Assert.assertEquals(2, split2.getRowCount());
+        Assert.assertEquals("2", split2.getValue(0, "key"));
+        Assert.assertEquals("3", split2.getValue(1, "key"));
+    }
+
+    private static String[] getColumnNames(final ITable split1) throws DataSetException {
+        return Arrays.stream(split1.getTableMetaData().getColumns())
+                .map(Column::getColumnName)
+                .toArray(String[]::new);
+    }
+
 }
